--- a/client/sass/_variables.scss
+++ b/client/sass/_variables.scss
@@ -7,3 +7,64 @@ $orange: #ff6314;
 
 // Other Variables - you can place anything else here that you think should be made global
 // eg) font-size, font-family, padding, margin
+
+// Grid variables
+$grid-width: 1140px;
+$gutter-vertical: 30px;
+$gutter-horizontal: 6px;
+
+// Grid layout
+.row {
+  max-width: $grid-width;
+  margin: 0 auto;
+
+  &:not(:last-child) {
+    margin-bottom: $gutter-vertical;
+  }
+
+  clearfix {
+    &::after {
+      content: "";
+      display: table;
+      clear: both;
+    }
+  }
+
+  [class^="col-"] {
+    float: left;
+
+    &:not(:last-child) {
+      margin-right: $gutter-horizontal;
+    }
+  }
+
+  .col-1-of-2 {
+    width: calc((100% - #{$gutter-horizontal}) / 2);
+  }
+
+  .col-1-of-3 {
+    width: calc((100% - 2 * #{$gutter-horizontal}) / 3);
+  }
+
+  .col-2-of-3 {
+    width: calc(
+      (2 * ((100% - 2 * #{$gutter-horizontal}) / 3) + #{$gutter-horizontal})
+    );
+  }
+
+  .col-1-of-4 {
+    width: calc((100% - 3 * #{$gutter-horizontal}) / 4);
+  }
+
+  .col-2-of-4 {
+    width: calc(
+      2 * ((100% - 3 * #{$gutter-horizontal}) / 4) + #{$gutter-horizontal}
+    );
+  }
+
+  .col-3-of-4 {
+    width: calc(
+      3 * ((100% - 3 * #{$gutter-horizontal}) / 4) + (2 * #{$gutter-horizontal})
+    );
+  }
+}
