Styled components (expect for the join button since we are going to make it consitent throughout the application by creating the  reusable button.)

--- a/client/components/TrendingCommunity/trendingcommunity.scss
+++ b/client/components/TrendingCommunity/trendingcommunity.scss
@@ -1,12 +1,40 @@
 .trending-community {
   width: 30%;
+  font-size: 12px;
   display: inline-block;
-  border: 1px solid #000;
-  border-radius: 100px;
+  border: 1px solid rgba(183, 183, 183, 0.8);
+  border-radius: 5px;
+  background-color: #ffffff;
+
+  &__headline {
+    text-transform: uppercase;
+    margin-left: 10px;
+    font-weight: bold;
+  }
 
   &__subreddit-info {
+    &__sub-info-1 {
+      margin-top: 6px;
+      font-weight: bold;
+    }
+
+    &__sub-info-2 {
+      margin-top: 6px;
+    }
   }
 
   &__join-btn {
+    vertical-align: middle;
   }
+}
+
+.image-wrapper {
+  padding: 5px 6px;
+}
+
+.icon {
+  height: 45px;
+  width: 45px;
+  border-radius: 50%;
+  vertical-align: middle;
 }
