Specified what 1rem will be in the root element. I also changed all units from pixels to rem.
TODOs:
1) Next.js somehow doesn't read the all imports from /sass/main.scss. I'll need to do some research on configuration with connecting nextjs and sass. Probably I have to specify some settings for node-sass (It's kind of tricky)

2) Normally, it is a better practice to specify a universal settings in the CSS file.
Setting margin: 0 and padding: 0 is a better practice.

--- a/client/sass/_variables.scss
+++ b/client/sass/_variables.scss
@@ -1,3 +1,29 @@
+/*******
+ * Universal Settings
+ */
+
+//*,
+//*:after,
+//*:before {
+//  margin: 0;
+//  padding: 0;
+//  box-sizing: inherit;
+//}
+
+/*****
+ * Default font size
+ */
+
+html {
+  // This defines what 1 rem is in this project.
+  font-size: 62.5%;
+}
+
+// TODO: We should declare default font-family and font-weight here.
+body {
+  box-sizing: border-box;
+}
+
 // Reddit's Color Palette - https://www.color-hex.com/color-palette/44513
 $blue: #5296dd;
 $light-blue: #92bddf;
@@ -9,9 +35,9 @@ $orange: #ff6314;
 // eg) font-size, font-family, padding, margin
 
 // Grid variables
-$grid-width: 1140px;
-$gutter-vertical: 30px;
-$gutter-horizontal: 6px;
+$grid-width: 114rem;
+$gutter-vertical: 3rem;
+$gutter-horizontal: 0.6rem;
 
 // Grid layout
 .row {
