--- a/client/components/TrendingCommunity/trendingcommunity.scss
+++ b/client/components/TrendingCommunity/trendingcommunity.scss
@@ -1,5 +1,5 @@
 .trending-community {
-  width: 35rem;
+  width: 34rem;
   font-size: 1.2rem;
   display: inline-block;
   border: 1px solid rgba($grey, 0.2);
@@ -33,6 +33,7 @@
 }
 
 .icon {
+  transform: translateY(0.5rem);
   height: 4.5rem;
   width: 4.5rem;
   border-radius: 50%;
