Make small adjustment for the position of icons and buttons.
Changed the button inside of the trending community component from Visited to Join

--- a/client/sass/base/_base.scss
+++ b/client/sass/base/_base.scss
@@ -22,4 +22,5 @@ html {
 // TODO: We should declare default font-family and font-weight here.
 body {
   box-sizing: border-box;
+  line-spacing: 1.7;
 }
