--- a/client/components/RecentPosts/recentposts.scss
+++ b/client/components/RecentPosts/recentposts.scss
@@ -5,11 +5,31 @@
   border-radius: 0.5rem;
   background-color: $white;
 
+  &__element {
+    &:not(:last-child) {
+      display: inline-block;
+      padding-bottom: 2rem;
+      border-bottom: 1px solid rgba($grey, 0.9);
+    }
+    &--border-length {
+    }
+  }
+
+  &__title {
+    font-size: 1.3rem;
+    font-weight: bold;
+  }
+
+  &__info {
+    font-size: 1.2rem;
+    color: $dark-grey;
+  }
+
   &__image-wrapper {
-    padding: 0.7rem;
+    padding: 0.9rem;
     &--icon {
       transform: translateY(0.5rem);
-      height: 4.5rem;
+      height: 5.5rem;
       width: 7rem;
       border-radius: 10%;
       vertical-align: middle;
