Limit the words of the title to be displayed (limit: 10 words)

--- a/client/components/RecentPosts/recentposts.scss
+++ b/client/components/RecentPosts/recentposts.scss
@@ -28,9 +28,9 @@
   }
 
   &__image-wrapper {
-    padding: 0.9rem;
+    //padding: 0.5rem;
     &--icon {
-      transform: translateY(0.5rem);
+      transform: translate(11%, 25%);
       height: 5.5rem;
       width: 7rem;
       border-radius: 10%;
