Add Css styling for input component.

--- a/client/sass/abstracts/_variables.scss
+++ b/client/sass/abstracts/_variables.scss
@@ -2,6 +2,7 @@
 $blue: #5296dd;
 $light-blue: #92bddf;
 $white: #ffffff;
+$black: #000000;
 $grey: #d7d7d7;
 $dark-grey: #7a7a7a;
 $orange: #ff6314;
