WIP: Add CSS styling for signin component.

--- a/client/components/Form/signin.scss
+++ b/client/components/Form/signin.scss
@@ -1,35 +1,44 @@
 .form {
-  &__main {
+  &__popup {
     height: 100vh;
     width: 100%;
     position: fixed;
     top: 0;
     left: 0;
     z-index: 9999;
-    background-color: rgba($black, 0.8);
+    background-color: rgba($black, 0.6);
     opacity: 1;
     visibility: visible;
   }
 
-  &__left {
-    width: 33.333333%;
-    display: table-cell;
-    //background-image: url("../../public/form_image.png");
-  }
-
-  &__right {
-    width: 66.6666667%;
-    display: table-cell;
-  }
-
   &__content {
     @include absCenter;
-    width: 60%;
+    width: 65%;
+    height: 60rem;
     background-color: $white;
     box-shadow: 0 2rem 4rem rgba($black, 0.2);
     border-radius: 0.3rem;
-    display: table;
     overflow: hidden;
+  }
+
+  &__main {
+    display: table;
+    height: 100%;
+
+    &__left {
+      display: table-cell;
+      //height: 40rem;
+      //
+      &__image {
+        //width: auto;
+        //height: 100%;
+      }
+    }
+
+    &__right {
+      //width: 75%;
+      display: table-cell;
+    }
   }
 
   &__input {
@@ -63,4 +72,9 @@
       }
     }
   }
+}
+
+.reddit_icon {
+  width: auto;
+  height: 80%;
 }
