--- a/client/components/Form/signin.scss
+++ b/client/components/Form/signin.scss
@@ -13,8 +13,8 @@
 
   &__content {
     @include absCenter;
-    width: 65%;
-    height: 60rem;
+    width: 58%;
+    height: 55rem;
     background-color: $white;
     box-shadow: 0 2rem 4rem rgba($black, 0.2);
     border-radius: 0.3rem;
@@ -24,20 +24,48 @@
   &__main {
     display: table;
     height: 100%;
+  }
 
-    &__left {
-      display: table-cell;
-      //height: 40rem;
-      //
-      &__image {
-        //width: auto;
-        //height: 100%;
-      }
+  &__left {
+    display: table-cell;
+    width: 35%;
+    background-image: url("../../public/form_image.png");
+    &__image {
+      display: inline-block;
+      width: auto;
+      height: 100%;
+      transform: translate(-27.5%, -23%) scale(0.6);
+    }
+  }
+
+  &__right {
+    display: table-cell;
+    width: 65%;
+  }
+
+  &__wrapper {
+    // display: inline-block;
+    &__icon {
+      background-color: $dark-orange;
+      border-radius: 10rem;
+      width: 5rem;
+      height: 5rem;
     }
 
-    &__right {
-      //width: 75%;
-      display: table-cell;
+    &__title {
+      text-transform: uppercase;
+      padding: 2rem 0 0 0.4rem;
+      font-size: 1.7rem;
+      font-weight: bold;
+    }
+
+    &__input {
+      padding: 1.5rem 0;
+    }
+
+    &__button {
+      transform: translate(38%, 15%);
+      width: 10rem;
     }
   }
 
@@ -74,7 +102,10 @@
   }
 }
 
-.reddit_icon {
-  width: auto;
-  height: 80%;
+.reddit-icon {
+  display: inline-block;
+  border-radius: 10rem;
+  width: 4rem;
+  height: 4rem;
+  transform: translate(11%, 11%);
 }
