--- a/client/sass/base/_utilities.scss
+++ b/client/sass/base/_utilities.scss
@@ -5,3 +5,11 @@
 .u-margin-top-medium {
   margin-top: 4rem;
 }
+
+.u-margin-top-large {
+  margin-top: 8rem;
+}
+
+.u-margin-top-huge {
+  margin-top: 10rem;
+}
