--- a/client/components/Form/form.scss
+++ b/client/components/Form/form.scss
@@ -138,6 +138,10 @@
       transition-timing-function: ease;
     }
 
+    &:focus {
+      outline: none;
+    }
+
     &:hover {
       border: 1px solid rgba($dark-grey, 0.6);
 
