--- a/client/components/Navigation/navigation.scss
+++ b/client/components/Navigation/navigation.scss
@@ -1,8 +1,62 @@
-.mainnav {
-  list-style: none;
+/*Basic Styling*/
+
+nav {
+  background: white;
+  padding: 1rem;
 }
 
-.navitem {
-  display: inline;
-  width: 1rem;
+ul {
+  list-style-type: none;
 }
+
+li {
+  font-size: 16px;
+}
+
+button {
+  border: none;
+  background-color: white;
+}
+
+option {
+  background-color: white;
+}
+
+.searchbar {
+  width: 100%;
+  height: 36px;
+  border-radius: 4px;
+  padding: 0 16px 0 40px;
+  border: 1px solid grey;
+  box-shadow: none;
+}
+
+.searchbar:hover {
+  outline-color: rgb(77, 144, 254);
+}
+
+.filterbox,
+.dropdownmenu {
+  border-radius: 4px;
+  text-align: left;
+  height: 36px;
+}
+
+/*Mobile Nav*/
+
+.navcontainer {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.logo {
+  transform: translateY(0.2rem);
+  height: 4.5rem;
+  width: 4.5rem;
+  border-radius: 50%;
+  vertical-align: middle;
+}
+
+/*Tablet Nav*/
