--- a/client/components/Nav/nav.scss
+++ b/client/components/Nav/nav.scss
@@ -116,8 +116,36 @@
       }
     }
 
-    // &__actions {
-    // }
+    &__quicklinks {
+      display: none;
+      border-right: 1px solid #edeff1;
+      padding-right: 8px;
+      margin-right: 8px;
+
+      &__link {
+        border-radius: 2px;
+        fill: #1a1a1b;
+        height: 16px;
+        width: 16px;
+        line-height: 14px;
+        padding: 8px;
+        font-size: 1.6rem;
+
+        &:hover,
+        &:focus {
+          background-color: rgba(26, 26, 27, 0.1);
+          outline: none;
+        }
+
+        &:not(:nth-of-type(1)) {
+          margin-left: 8px;
+        }
+
+        &__icon {
+          color: #1a1a1b;
+        }
+      }
+    }
   }
 }
 
@@ -128,6 +156,16 @@
         &__text {
           display: block;
         }
+      }
+    }
+  }
+}
+
+@media screen and (min-width: 788px) {
+  .nav-container {
+    .nav__item {
+      &__quicklinks {
+        display: flex;
       }
     }
   }
