--- a/client/components/SortView/sortview.scss
+++ b/client/components/SortView/sortview.scss
@@ -1,3 +1,18 @@
 .sortview {
-  width: 20rem;
+  width: 27rem;
+
+  &__option {
+    display: flex;
+    &__icon {
+      height: 2.2rem;
+      width: 2.2rem;
+      margin-right: 1rem;
+      color: #5296dd;
+    }
+
+    &__label {
+      text-transform: uppercase;
+      color: #d7d7d7;
+    }
+  }
 }
