--- a/client/components/Nav/nav.scss
+++ b/client/components/Nav/nav.scss
@@ -1,5 +1,3 @@
-/*Basic Styling*/
-
 .nav-container {
   display: flex;
   flex-direction: row;
@@ -146,6 +144,36 @@
         }
       }
     }
+
+    &__auth {
+      display: none;
+    }
+  }
+}
+
+@media screen and (min-width: 616px) {
+  .nav-container {
+    .nav__item {
+      &__auth {
+        display: flex;
+
+        &__btn {
+          &:nth-of-type(2) {
+            margin-left: 0.4rem;
+          }
+        }
+      }
+    }
+  }
+}
+
+@media screen and (min-width: 788px) {
+  .nav-container {
+    .nav__item {
+      &__quicklinks {
+        display: flex;
+      }
+    }
   }
 }
 
@@ -161,11 +189,17 @@
   }
 }
 
-@media screen and (min-width: 788px) {
+@media screen and (min-width: 1180px) {
   .nav-container {
     .nav__item {
-      &__quicklinks {
-        display: flex;
+      &__auth {
+        &__btn {
+          width: 120px;
+
+          &:nth-of-type(2) {
+            margin-left: 1.6rem;
+          }
+        }
       }
     }
   }
