--- a/client/components/SortView/sortview.scss
+++ b/client/components/SortView/sortview.scss
@@ -8,7 +8,7 @@
     text-transform: uppercase;
     font-weight: normal;
     font-size: 1.3rem;
-    color: $dark-grey;
+    // color: $dark-grey;
     margin-right: 2rem;
   }
 
@@ -34,7 +34,7 @@
         vertical-align: middle;
         font-size: 1.3rem;
         font-weight: normal;
-        color: #d7d7d7;
+        // color: #d7d7d7;
         margin: 0;
       }
 
@@ -50,7 +50,7 @@
 
 .countryoption {
   display: flex;
-  color: $dark-grey;
+  // color: $dark-grey;
 
   &__filter {
     width: 20rem;
