--- a/client/components/Form/form.scss
+++ b/client/components/Form/form.scss
@@ -47,6 +47,11 @@
 
     width: 70%;
 
+    & > h2 {
+      font-size: 2rem;
+      font-weight: bold;
+    }
+
     & > p {
       font-size: 2rem;
       font-weight: bold;
