--- a/client/sass/abstracts/_mixins.scss
+++ b/client/sass/abstracts/_mixins.scss
@@ -27,3 +27,29 @@
     }
   }
 }
+
+@mixin navOptionContainer($padding) {
+  display: flex;
+  align-items: center;
+  height: 36px;
+  background-color: transparent;
+  text-decoration: none;
+  cursor: pointer;
+  box-sizing: border-box;
+  color: #1c1c1c;
+  padding: #{$padding};
+}
+
+@mixin navOptionIcons() {
+  height: 20px;
+  width: 20px;
+  color: $blue;
+  margin-right: 10px;
+}
+
+@mixin navOptionLabels() {
+  color: black;
+  font-size: inherit;
+  font-weight: normal;
+  margin: 0;
+}
