Adjust button position. ----- DONE!!!

--- a/client/components/Form/form.scss
+++ b/client/components/Form/form.scss
@@ -77,7 +77,7 @@
 
     &__button {
       width: 15rem;
-      transform: translateX(27%);
+      transform: translateY(15%);
     }
 
     &__link {
